--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,110 @@
+* {
+        box-sizing: border-box;
+    }
 
+    body {
+        background-color: white;
+        font-family: 'Roboto', sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+
+    h1 {
+        margin-bottom: 15px;
+        text-align: center;
+        color: black;
+        font-size: 50px;
+    }
+
+    section {
+        position: relative;
+        padding: 15px;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    p {
+        position: relative;
+        clear: right;
+    }
+
+    div {
+        position: relative;
+        background-color: white;
+        border: 2px solid black;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: auto;
+    }
+
+    .sub-title {
+        width: 30%;
+        padding: 5px;
+        margin: -3px -3px 0px;
+        border: 1px solid black;
+        text-align: center;
+        float: right;
+        font-size: 125%;
+        font-weight: bold;
+        background-color: lightblue;
+    }
+
+    .content {
+        padding: 5px;
+        border: none;
+        background-color: white;
+        color: black;
+        margin: 3px;
+        height: 150px;
+        overflow: auto;
+    }
+
+    /*desktop version*/
+    @media (min-width: 992px) {
+        .column-lg-4 {
+            float: left;
+            width: 33.33%;
+        }
+    }
+
+    /*tablet version*/
+    @media (min-width: 768px) and (max-width: 991px) {
+        .colmn-md-6 {
+            float: left;
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+         .colmn-md-12 {
+            float: left;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    /*mobile version*/
+    @media screen and (max-width: 767px) {
+        .column-lg-4
+         {
+            width: 100%;
+            float: left;
+        }
+        .colmn-md-6
+        {
+            float: left;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .colmn-md-12 {
+            float: left;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
